<resources>

    <string name="app_name">Task Master</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="idtext">idText</string>
    <string name="text">Text</string>
    <string name="textview">TextView</string>
    <string name="add_task">add_task</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="teams_list">Teams list</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">sign in</string>
    <string name="sign_In">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="Upload_">Upload file</string>

    <string-array name="team_names_array">
        <item>TeamA</item>
        <item>TeamB</item>
        <item>TeamC</item>
    </string-array>
</resources>